# backend-flask

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
alembic/versions/: 5394fc62e312_merge_bab354426a0e_and_97df38784d65.py  5d011ccf390c_create_country_table.py  97df38784d65_create_user_groups.py  bab354426a0e_create_user_profile.py  f5e2b6df626f_create_user_tables.py  fa3f1f77bdd6_create_group_tables.py
backend/: __init__.py  __main__.py  config.py
backend/decorators/: __init__.py
backend/dto/: credentials.py  user.py
backend/models/: __init__.py  country.py  group.py  message.py  user.py
backend/routes/: __init__.py  auth.py  errors.py  groups.py  health.py  mails.py  users.py
backend/static/css/: layout.css  summary_mail.css
backend/templates/: layout.html.jinja  summary_mail.html.jinja
tests/: conftest.py
tests/dto/: test_credentials.py  test_user.py
tests/routes/: test_auth.py  test_groups.py  test_users.py
